[DEV-2] added database layer to the cart subdomain, restructured cross-cutting concerns

--- a/infrastructure/local/k8s/mongo-depl.yaml
+++ b/infrastructure/local/k8s/mongo-depl.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongo-depl
+  name: server-mongo-depl
   namespace: jacando-task
 spec:
   replicas: 1
@@ -27,7 +27,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongo-srv
+  name: server-mongo-srv
   namespace: jacando-task
 spec:
   selector:
@@ -41,7 +41,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongo-ext-port
+  name: server-mongo-ext-port
   namespace: jacando-task
 spec:
   type: NodePort
