[DEV-2] added basic graphql api layer to shopping subdomain

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -9,6 +9,7 @@ DB_AUTHSOURCE=
 DB_CONNECTION_TIMEOUT=
 API_BASE_URL=
 API_VERSION=
+GRAPHQL_PLAYGROUND=
 LOG_OUTPUT_LEVEL=
 LOG_CONSOLE_LEVEL=
 ALLOWED_ORIGINS=
