--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,17 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
+    "antd": "^5.4.2",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "prettier": "^2.8.7",
     "typescript": "^4.9.5"
   },
   "scripts": {
