--- a/infrastructure/local/k8s/client-depl.yaml
+++ b/infrastructure/local/k8s/client-depl.yaml
@@ -1,32 +1,32 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: client-depl
-  namespace: jacando-task
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: client
-  template:
-    metadata:
-      labels:
-        app: client
-    spec:
-      containers:
-        - name: client
-          image: jacando-task/client
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: client-srv
-  namespace: jacando-task
-spec:
-  selector:
-    app: client
-  ports:
-    - name: client
-      protocol: TCP
-      port: 3000
-      targetPort: 3000
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: client-depl
+#   namespace: jacando-task
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: client
+#   template:
+#     metadata:
+#       labels:
+#         app: client
+#     spec:
+#       containers:
+#         - name: client
+#           image: jacando-task/client
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: client-srv
+#   namespace: jacando-task
+# spec:
+#   selector:
+#     app: client
+#   ports:
+#     - name: client
+#       protocol: TCP
+#       port: 3000
+#       targetPort: 3000
