--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
     "antd": "^5.4.2",
+    "classnames": "^2.3.2",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "node-sass": "^7.0.3",
     "prettier": "^2.8.7",
     "typescript": "^4.9.5"
   },
