[DEV-3] returned client to k8s, reduced artificial delays

--- a/infrastructure/local/skaffold.yaml
+++ b/infrastructure/local/skaffold.yaml
@@ -16,11 +16,11 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
-    # - image: jacando-task/client
-    #   context: ../../client
-    #   docker:
-    #     dockerfile: Dockerfile.dev
-    #   sync:
-    #     manual:
-    #       - src: '**/*.js'
-    #         dest: .
+    - image: jacando-task/client
+      context: ../../client
+      docker:
+        dockerfile: Dockerfile.dev
+      sync:
+        manual:
+          - src: '**/*.js'
+            dest: .
