--- a/client/package.json
+++ b/client/package.json
@@ -21,9 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.6.0",
-    "node-sass": "^7.0.3",
     "prettier": "^2.8.7",
+    "sass": "^1.62.0",
     "typescript": "^4.9.5"
   },
   "scripts": {
