--- a/.editorconfig
+++ b/.editorconfig
@@ -15,6 +15,9 @@ format_on_save = true
 [*.ts]
 quote_type = single
 
+[*.tsx]
+format_on_save = true
+
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
