--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,18 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
+    "antd": "^5.4.2",
+    "classnames": "^2.3.2",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "prettier": "^2.8.7",
+    "sass": "^1.62.0",
     "typescript": "^4.9.5"
   },
   "scripts": {
