--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "cypress": "^12.9.0",
     "prettier": "^2.8.7",
     "sass": "^1.62.0",
     "typescript": "^4.9.5"
@@ -29,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "e2e": "cypress open --browser=chrome",
+    "e2e:silent": "cypress run --browser=chrome"
   },
   "eslintConfig": {
     "extends": [
